--- a/Rapport/0formalia/titlepage.tex
+++ b/Rapport/0formalia/titlepage.tex
@@ -50,7 +50,7 @@
   }{%
     6. Semester %project period
   }{%
-    16gr514 % project group
+    16gr640 % project group
   }{%
     %list of group members
     Kasper Kiis Jensen\\
@@ -58,7 +58,7 @@
     Mikkel Krogh Simonsen
   }{%
     %list of supervisors
-    Sofus 
+    Sofus Birkedal Nielsen
     }{
     
     }{%
