--- a/Rapport/1Chapters/1Preanalysis/PartConclusionAmpSpeaker.tex
+++ b/Rapport/1Chapters/1Preanalysis/PartConclusionAmpSpeaker.tex
@@ -8,8 +8,8 @@ This chapter has analyzed an active speaker and its components to investigate ho
 \item Loudspeaker
 	\begin{itemize}
 	\item Vibrations from enclosure.
-	\item Overexcursion.
-	\item Membrane hitting the coil.
+	\item Overexcursion (physical clipping).
+	\item Coil hitting the back plate.
 	\end{itemize}
 \end{itemize}
-Of these situations the focus moving forward will only be concerning the distortion situation from the loudspeaker because clipping in the amplifier is easy to solve, because the parameters in the amplifier is constant and the signal is easily limited to create less distortion then by hard clipping. The next chapter will therefore explain and analyze performance tests of a loudspeaker to see if any of the above loudspeaker situations can be detected. 
+Of these situations the focus moving forward will only be concerning the distortion situations from the loudspeaker because clipping in the amplifier is easy to solve, because the parameters in the amplifier is constant and the signal is easily limited to create less distortion than by hard clipping. The next chapter will therefore explain and analyze performance tests of a loudspeaker to see if any of the above loudspeaker situations can be detected using test signals and not music. 
