--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_AVC.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_AVC.tex
@@ -1,7 +1,7 @@
-\subsection*{Automatic volume control}
+\subsection{Automatic volume control}
 The last way of processing the signal to avoid surpassing the performance limits of a loudspeaker is an \gls{AVC}. The concept of an AVC is setting a maximum magnitude threshold for the entire frequency spectrum or for a specific frequency bandwidth and then attenuating the magnitude of the entire frequency spectrum down to the threshold if the threshold is exceeded.
 
-\subsection*{Choice of signal processing}
+\subsection{Choice of signal processing}
 The advantage of the AVC over the equalizer and the limiter is that is does not alter the frequency response of the input signal, which means that the music will be played at the maximum magnitude, at which the loudspeaker will not be damaged, with the musics full dynamic range and the with intended frequency response. This means that music which is not bass heavy will be able to play at a higher volume than bass heavy music because the loudspeaker is less likely to be damaged by higher frequencies as described in \todo[inline]{SIGNAL ANALYSIS REFERENCE}
 
 It could also be a disadvantage that the frequency response of the input cannot be altered. Opposed the AVC The equalizer is able to secure that the loudspeaker is not damaged by attenuating the specific frequency bandwidths which has surpassed the performance limits of the loudspeaker, which gives the possibility of turning up the volume but with an altered frequency response because of the attenuated bandwidth. The disadvange is therefore that the music can sound strange if the frequency response is altered when the volume is higher than the threshold.
