--- a/Rapport/2Appendix/Distortion.tex
+++ b/Rapport/2Appendix/Distortion.tex
@@ -1,4 +1,4 @@
-\section{Distortion}
+\section{Distortion} \label{app:distortion}
 
 Lastly it is important to know what type of sound is wanted in the system. What is desirable and what is unwanted. This is known as distortion. This section covers only the fundamentals of distortion, particular harmonic distortion, and describes what this project will be trying to achieve and avoid. Harmonic distortion is usually negative and unwanted. Distortion however, comes in two categories:
 \begin{itemize}
