--- a/Rapport/figures/SpeakerBlock.tex
+++ b/Rapport/figures/SpeakerBlock.tex
@@ -6,7 +6,7 @@
 \node [block, fill=white] (Signal processing system) at ($(AudioSource)+(4,0)$) {Processing system};
 \node [block, fill=white] (Amplifier) at ($(Signal processing system)+(4,0)$) {Amplifier};
 \node [block, fill=white] (PSU) at ($(Amplifier)+(0,2)$) {PSU};
-\node [block, fill=white] (Driver) at ($(Amplifier)+(3.5,0)$) {Driver};
+\node [block, fill=white] (Driver) at ($(Amplifier)+(3.5,0)$) {Woofer};
 
 %% Store Blokke %%
 \begin{pgfonlayer}{bg}
