--- a/Rapport/0formalia/preface.tex
+++ b/Rapport/0formalia/preface.tex
@@ -1,5 +1,5 @@
 \chapter*{Preface}\label{ch:forord}%\addcontentsline{toc}{chapter}{Forord}
-This report has been carried out during spring of 2016 as a 6. semester Electronics and IT student bachelor project at Aalborg University by group 16grXXX. The project concerns the development of Somehting extremely awesome.
+This report has been carried out during spring of 2016 as a 6. semester Electronics and IT student bachelor project at Aalborg University by group 16gr640. The project concerns the development of Somehting extremely awesome.
 
 The project will be developed in cooperation with Danish Audiophile Loudspeaker Industries (DALI) (refer to \autoref{app:dali} for further information) whome will help with guidance of the project and speakers for the project.   
 \\\\
