--- a/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
+++ b/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
@@ -1,5 +1,6 @@
 \chapter{Test of DALI Zensor 5}
-Since now a basic understanding of the loudspeaker topology has been given it is deemed relevant to observe an actual speakers performance to see if any problem arises when the speaker is pushed to its limits. This section will go through a test of a loudspeaker to investigate and to check if any vibrations in the loudspeaker affect the distortion of the loudspeaker. The loudspeaker which will be the basis for the test is the Zensor 5, shown on \autoref{fig:dali_zensor5}, produces by DALI. A passive speaker has been choosen for the test because the amplifiers in DALI's active speakers are designed not to stress the loudspeaker to its limits and beyond, and to be able to test how the vibrations affect distortion, the loudspeaker must be tested to above its limits.
+ A basic understanding of the loudspeaker topology has now been given it is deemed relevant to observe an actual loudspeakers performance to see if any of the mentioned situations that create distortion arises when a loudspeaker is pushed to its limits and beyond. %This section will go through a test of a loudspeaker to investigate if any vibrations in the loudspeaker affect the distortion of the loudspeaker. 
+ The loudspeaker which will be the basis for the test is the Zensor 5, shown on \autoref{fig:dali_zensor5}, produced by DALI. A passive loudspeaker has been choosen for the test because the amplifier in DALI's active loudspeakers are designed not to push the loudspeaker to its limits and beyond. %and to be able to test how the vibrations affect distortion, the loudspeaker must be tested to above its limits.
 
 \begin{figure}[H]
 \centering
@@ -10,25 +11,27 @@ Since now a basic understanding of the loudspeaker topology has been given it is
 
 %\todo[inline]{Reference http://www.dali-speakers.com/loudspeakers/zensor/zensor-5/}
 
-For measuring the vibrations inside the enclosure two accelometers have been placed inside the enclosure, one on the back of bottom driver and one on the top back of the enclosure. For measuring distortion a microphone has been placed 1 m from the speaker. To limit any reflection from the room, the test is perfomed in the Anechoic room at \gls{AAU} see \ref{fig:test_setup_R}.  
+For measuring the vibrations inside the enclosure two accelometers have been placed inside the enclosure, one on the back of bottom driver and one on the top back of the enclosure. For measuring sound a microphone has been placed 1 m from the speaker. To limit any reflection from the room, the test is perfomed in the Anechoic room at \gls{AAU} see \ref{fig:test_setup_R}.  
 %\todo[inline]{Reference (09.03.2016) http://doc.es.aau.dk/labs/acoustics/facilities/anechoic_room_large/} 
 
 
 
-The loudspeaker is set to play a sinesweep from the crossover frequency of the speaker which is 2400 Hz to 10 Hz. The sine sweep is then repeated from the lowest volume setting of an power amplifier until the loudspeaker breaks. This resulted in 20 sine sweep measurements from all three sensors which can be seen in the full test jounal in \autoref{app:journal_speaker_test}.    
+The loudspeaker is set to play a sinesweep from the crossover frequency of the speaker which is 2400 Hz to 10 Hz. The sine sweep is then repeated from the lowest volume setting of a power amplifier until the loudspeaker breaks. There are in total 20 datasets each containing four measurements, namely the vibrations from the enclosure and driver, the sound pressure from the microphone, and lastly a reference signal to synchronize all data. The amount of data is therefore large and only relevant datasets will be presented. If needed, a more comprehensive approach is taken in \autoref{app:journal_speaker_test} and a full detailed overview of graphs is stored on the enclosed CD.%This resulted in 20 sine sweep measurements from all three sensors  where the results can be deducted from the test journal in \autoref{app:journal_speaker_test} and the outputs from every sensor can be seen on the CD
+\todo[inline]{reference til cd}
 
 
 \section{Analysis of the DALI Zensor AX 5 measurements}
 
-In this section a brief review and conclusion of the analysis done in \autoref{app:journal_speaker_test} is presented. The purpose of this analysis is to examine if it possible to tell the current performance of the loudspeaker from the accelerometer placed on the loudspeaker. There are many different approaches in analysing the measured data, and the approach done in this project, will be analysing the frequency response of the loudspeaker vibration, harmonic distortion, and detection of the coil hitting the back plate of the driver. The structure of the following part of this section will be showing how the speaker reacts to the different levels of amplification and to expose if a pattern can be modelled.
+In this section a brief review and conclusion of the analysis done in \autoref{app:journal_speaker_test} is presented. %The purpose of this analysis is to examine if it possible to tell the current performance of the loudspeaker from the accelerometer placed on the loudspeaker. 
+There are many different approaches in analysing the measured data, and the approach done in this project, will be analysing the frequency response of the loudspeaker vibration, harmonic distortion, and detection of the coil hitting the back plate of the driver. The structure of the following part of this section will be showing how the speaker reacts to the different levels of amplification and to expose if a pattern can be extracted.
 
-\subsection{Experiment analysis}
+%\subsection*{Experiment analysis}
 
-As previously stated there are in total 20 datasets each containing four measurements, namely the vibrations from the enclosure and driver, the sound pressure from the microphone, and lastly a reference signal to synchronize all data. The amount of data is therefore large and only relevant datasets will be presented. If needed, a more comprehensive approach is taken in \autoref{app:journal_speaker_test} and a full detailed overview of graphs is stored on the enclosed CD.
+%As previously stated there are in total 20 datasets each containing four measurements, namely the vibrations from the enclosure and driver, the sound pressure from the microphone, and lastly a reference signal to synchronize all data. The amount of data is therefore large and only relevant datasets will be presented. If needed, a more comprehensive approach is taken in \autoref{app:journal_speaker_test} and a full detailed overview of graphs is stored on the enclosed CD.
 
-\vspace{3mm}
+%\vspace{3mm}
 
-During the first measurements the speaker act more ore less totally linear. The frequency response keeps being steadily the same just with an increase in amplitude. This was as expected, A tendency shows that the 3rd harmonic increases more rapidly than the 2nd harmonic, again as expected for the performance of a speaker. When we push the speaker beyond the capabilities told by DALI an anomaly appears in the measurements. This is shown in \autoref{fig:raw_driver19_window_main}, where spikes in amplitude appear when playing very low frequency sound. 
+During the first measurements the loudspeaker acts more ore less totally linear. The frequency response keeps being steadily the same with an increase in amplitude which was expected. A tendency shows that the 3rd harmonic increases more rapidly than the 2nd harmonic, again as expected for the performance of a loudspeaker. When the speaker was pushed beyond the capabilities told by DALI an anomaly appears in the measurements. This is shown in \autoref{fig:raw_driver19_window_main}, where spikes in amplitude appear when playing very low frequency sound. 
 
 \begin{figure}[H]
 \centering
@@ -49,8 +52,7 @@ During the first measurements the speaker act more ore less totally linear. The 
 \label{fig:raw_driver19_windows_main}
 \end{figure}
 
-Further investigation of the spikes is shown in figure \ref{fig:raw_driver19_window_zoom_main}. It shows that theses spikes appear where the speaker should naturally attenuate the spikes. The spikes appear with no sudden coherence. Looking further into the specific area, around 70-90 Hz, an FFT analysis show how hit on the back plates appear. This is shown on \autoref{fig:FFT_hit_Main}.
-
+Further investigation of the spikes is shown in figure \ref{fig:raw_driver19_window_zoom_main}. It shows that theses spikes appear where the speaker should naturally attenuate the spikes. The spikes appear with no sudden coherence. Looking further into the specific area, around 70-90 Hz, an FFT analysis shows how the hit on the back plates appears which is shown on \autoref{fig:FFT_hit_Main}.
 
 \begin{figure}[H]
 \centering
