--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -3,7 +3,8 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%% Problem analyse %%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{The Active Loudspeaker and its Limitations}
-Before developing a system which can improve the overall performance of an active loudspeaker an brief analysis on how an active loudspeaker works, is needed. The main topic of this chapter is to analyse how a human perceives sound and examine any issues concerning distortion in an active loudspeaker, since it is commonly known that distortion adds undesirable artefacts to the sound. The purpose of this chapter is therefore to examine if it is possible to increase the performance of an active loudspeaker without creating too much distortion. 
+%Before developing a system which can improve the overall performance of an active loudspeaker a brief analysis on how an active loudspeaker functions, is needed. 
+The main topic of this chapter is to analyse an active loudspeaker and examine any issues concerning distortion in an active loudspeaker, since it is commonly known that distortion adds undesirable artefacts to the sound. %The purpose of this chapter is therefore to examine if it is possible to increase the maximum performance of an active loudspeaker without creating more distortion. 
 
 The initial starting point for the analysis is the block diagram of an active loudspeaker as seen in \autoref{fig:speaker_block}. It is seen that the the active loudspeaker is a passive loudspeaker with an incorporated amplifier.
 
@@ -15,14 +16,14 @@ The initial starting point for the analysis is the block diagram of an active lo
 \caption{Block diagram of an active speaker.}
 \label{fig:speaker_block}
 \end{figure}
-The active loudspeaker has more flexibility than a passive loudspeaker because an active loudspeaker is powered by its own power supply. The power supply adds the option for an built-in amplifier but also peripheral electronics in "Processing system" that can be incorporated for example a wireless transceiver for audio streaming, which reduces the amount of wiring to only a 230 V connector. An example of the backside of an active speaker is seen on \autoref{fig:dali_zensor_ax}, which shows the Zensor 1 AX's from DALI.
+The active loudspeaker has more flexibility than a passive loudspeaker because an active loudspeaker is powered by its own power supply. The power supply adds the option for an built-in amplifier but also peripheral electronics in "Processing system" that can be incorporated for example a wireless receiver for audio streaming, which reduces the amount of wiring to only a 230 V connector. An example of the backside of an active speaker is seen on \autoref{fig:dali_zensor_ax}, which shows the Zensor 1 AX's from DALI.
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.6\textwidth]{figures/dali_zensor_1_ax.jpg}
 \caption{DALI Zensor 1 AX.}
 \label{fig:dali_zensor_ax}
 \end{figure}
-The DALI Zensor 1 enables you to connect your audio source via cable or via Bluetooth and change volume and source directly on the speaker itself which makes it very flexible in its use. With this very general description a more detailed analysis of how an active loudspeaker is build and since the distortion is mainly created in the amplifier and driver the analysis will be focused on the amplifier and driver.
+The DALI Zensor 1 enables you to connect your audio source via cable or via Bluetooth and change volume and source directly on the speaker itself which makes it very flexible in its use. With this very general description a more detailed analysis of how an active loudspeaker is build and since the distortion is mainly created in the amplifier and woofer the analysis will be focused here on.
 
 \input{1Chapters/1Preanalysis/Amplifier.tex}
 
@@ -43,9 +44,9 @@ The analysis so far has mainly concerned how the performance of a loudspeaker is
 
 \begin{center}
 \label{ProblemStatement}
-\textit{How can an real-time signal processing system survey the on going performance of an active speaker system to limit the amount of distortion and prevent the coil from hitting the back plate of the driver?"}
+\textit{How can a real-time signal processing system in an active speaker limit the amount of distortion and prevent the coil from hitting the back plate of the woofer?"}
 \end{center}
-Besides the problem stated above, DALI desires to incorporated a user controlled equalizer for the commercial user so it will be able to function more optimal in different room sizes. Further more it should be fully customizable for ongoing adjustments during the development period.\todo{Tilføj kilde til mail fra DALI}
+Besides the problem stated above, DALI desires to have incorporated a user controlled equalizer for the commercial user so it will be able to function more optimal in different room sizes. Further more it should be fully customizable for ongoing adjustments during the development period.\todo{Tilføj kilde til mail fra DALI}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%% Teknisk Analyse %%%%%%%%%%%%%%%%%%%%%%%%
