--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_Interface.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_Interface.tex
@@ -8,7 +8,7 @@ There are two different intended users for the equalizer:
 \end{itemize}
 This means that there are different requirements for the specific user of the equalizer.
 
-\subsection*{User interface for the developer}
+\subsection{User interface for the developer}
 The developer is the user which knows everything about an equalizer and its effects on a system therefore the developer desires a great deal of control and options in the interface of the equalizer. This means that the interface can be complex and must not set no restrictions for the developer.  
 
 Because the developer needs to have full control of the equalizer he needs to have control of: 
@@ -30,7 +30,7 @@ This leads to a suggestions for a user interface which gives full control to a d
 
 The suggestion on \autoref{fig:Dev_sug} has push buttons on the bands so they can be toggled on and of while the center frequency, gain and Q - value for each band can be changed with the use of knobs. The suggestion will be accompanied by a big screen where the frequency response of the equalizer can be seen. 
 
-\subsection*{User interface for the commercial user}
+\subsection{User interface for the commercial user}
 The commercial user is the user which knows the implication of different the different settings of an equalizer but does not know anything about the technical aspect of an equalizer. This means that the interface needs to be simple and show what implpication a setting has on a system but leave out all technical aspects. 
 
 Because the commercial user only needs presets like for example "rock", "jazz" and "movie" the user only needs to have control of: 
