--- a/Rapport/1Chapters/1Preanalysis/PartConclusionAmpSpeaker.tex
+++ b/Rapport/1Chapters/1Preanalysis/PartConclusionAmpSpeaker.tex
@@ -1,4 +1,4 @@
-\section{Part Conclusion}
+\section{Conclusion}
 This chapter has analyzed an active speaker and its components to investigate how distortion is created throughout the active loudspeaker. The conclusion is that the following situations create distortion.
 \begin{itemize}
 \item Amplifier
