--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_AVC.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_AVC.tex
@@ -1,14 +1,14 @@
-\subsection{Automatic volume control}
-The last way of processing the signal to avoid surpassing the performance limits of a loudspeaker is an \gls{AVC}. The concept of an AVC is setting a maximum magnitude threshold for the entire frequency spectrum or for a specific frequency bandwidth and then attenuating the magnitude of the entire frequency spectrum down to the threshold if the threshold is exceeded.
+\subsection{Automatic Volume Control}
+The last method to be examined, to avoid surpassing the performance limitation of a loudspeaker, is an \gls{AVC}. The concept of the AVC is setting a maximum amplitude threshold for the entire frequency spectrum or for a specific frequency bandwidth and then attenuating the magnitude of the entire frequency spectrum down to the threshold if the threshold is exceeded.
 
 \subsection{Choice of signal processing}
-The advantage of the AVC over the equalizer and the limiter is that is does not alter the frequency response of the input signal, which means that the music will be played at the maximum magnitude, at which the loudspeaker will not be damaged, with the musics full dynamic range and the with intended frequency response. This means that music which is not bass heavy will be able to play at a higher volume than bass heavy music because the loudspeaker is less likely to be damaged by higher frequencies as described in \todo[inline]{SIGNAL ANALYSIS REFERENCE}
+The advantage of the AVC over the equalizer and the limiter is that it does not alter the frequency response of the input signal, which means that the music will be played at the maximum magnitude, at which the loudspeaker will not be damaged, with the musics full dynamic range and the with intended frequency response. This means that music which does not contain much low frequency energy, will be able to play at a higher volume than bass heavy music because the loudspeaker is less likely to be damaged by higher frequencies as described in \todo[inline]{SIGNAL ANALYSIS REFERENCE}
 
-It could also be a disadvantage that the frequency response of the input cannot be altered. Opposed the AVC The equalizer is able to secure that the loudspeaker is not damaged by attenuating the specific frequency bandwidths which has surpassed the performance limits of the loudspeaker, which gives the possibility of turning up the volume but with an altered frequency response because of the attenuated bandwidth. The disadvange is therefore that the music can sound strange if the frequency response is altered when the volume is higher than the threshold.
+It could also be a disadvantage that the frequency response of the input cannot be altered. Opposed the AVC, the equalizer is able to secure that the loudspeaker is not damaged by attenuating the specific frequency bandwidths which has surpassed the performance limits of the loudspeaker, which gives the possibility of turning up the volume but with an altered frequency response because of the attenuated bandwidth. The disadvantage is therefore that the music can sound strange if the frequency response is altered when the volume is higher than the threshold.
 
-The limiter versus the AVC and equalizer compresses the signal close the threshold instead of attenuating respectively the whole frequency spectrum and a frequency bandwidth. The advantage of protecting the loudspeaker this way is that an attenuation by an equalizer in a specific frequecy spectrum gives a lower output than a compression by a limiter does, the disadvantage of the limiter though is an increase in distortion when compressing. 
+The limiter versus the AVC and equalizer compresses the signal close the threshold instead of attenuating respectively the whole frequency spectrum and a frequency bandwidth. The advantage of protecting the loudspeaker this way is that an attenuation by an equalizer in a specific frequency spectrum, gives a lower output than a gain reduction by a limiter does, the disadvantage of the limiter though is an increase in uneven harmonic distortion when compressed. 
 
-Based on the analysis it is decided to use an equalizer over the AVC and the limiter because the equalizer offers the optimal solution of protecting the loudspeaker against damage and gives the possibility of increasing the volume even though the threshold of a frequency bandwidth has been surpassed, which the AVC does not do. It is also assesed that the increased distortion introduced by the limiter is not to prefer over attenuation by filtering which would give a slightly lower output.  
+Based on the analysis it is decided to use an equalizer over the AVC and the limiter because the equalizer offers the optimal solution of protecting the loudspeaker against damage and gives the possibility of increasing the volume even though the threshold of a frequency bandwidth has been surpassed, which the AVC does not do. It is also assessed that the increased distortion introduced by the limiter is not to preferred over attenuation by filtering which would give a slightly lower output.  
 
 
       
