--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_Equalizer.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_Equalizer.tex
@@ -1,11 +1,11 @@
 \section{Signal processing}
-This section will examine the options for processing the signal so the limits of the loudspeaker never gets surpassed. Three ways for processing the signal is set up:  
+This section will examine the options for processing the signal so the limit of the loudspeaker never gets surpassed. Three ways for processing the signal are set up:  
 \begin{itemize}
 \item Equalizer.
 \item Limiter.    
 \item Automatic Volume Control. 
 \end{itemize}
-These ways of processing the signal will be analyzed to determine which way is the most optimal for the purpose of protecting the loudspeaker as described in \autoref{sec:problem_statement}.  
+These methods of processing the signal will be analysed to determine which methods is the most optimal for the purpose of protecting the loudspeaker as described in \autoref{sec:problem_statement}.  
 
 \subsection{Graphic and parametric equalizer}\label{sec:tech_equalizer}
 This section will cover the design possibilities of an equalizer and filter in an digital system. 
