Tilføjet nyt forsøg i appendix

--- a/Rapport/2Appendix/AppendixMAIN.tex
+++ b/Rapport/2Appendix/AppendixMAIN.tex
@@ -5,6 +5,8 @@
 
 \input{2Appendix/SpeakerTESTOneFrequency}
 
+\input{2Appendix/SpeakerTESTOneFrequencyExtended}
+
 %\input{2Appendix/SpeakerTESTImpulse}
 
 
