new updates hardware

--- a/Rapport/1Chapters/3SystemOverview/ChoiceOfHardware.tex
+++ b/Rapport/1Chapters/3SystemOverview/ChoiceOfHardware.tex
@@ -42,8 +42,7 @@ The TMDX5515EZDSP from Spectrum Digital is chosen as the development board. The 
 
 The TMS320C5515 is interfaced to the audio codec through an $\text{I}^2$S bus and $\text{I}^2$C bus. The $\text{I}^2$S bus is used to transmit and receive serial audio data between each unit, while the $\text{I}^2$C is used by the DSP to control the audio codec. According to the datasheet for the TLV320AIC3204 the rated ADC and DAC input voltage is 0.5 $\text{V}_\text{RMS}$ or 0.7071 $\text{V}_\text{peak}$. If the input signal exceeds the voltage level, the audio codec will clip the signal. To avoid this, the audio source must not exceed a peak voltage on 0.7071 V.
 
-To setup the audio codec so it complies with the requirements on 24-bit and a sampling rate on 96 kHz, the $\text{I}^2$C bus between the dsp and audio codec is used to write to the control registers. 
-
+To setup the audio codec so it complies with the requirements on 24-bit and a sampling rate on 96 kHz, the $\text{I}^2$C bus between the dsp and audio codec is used to write to the control registers. \autoref{fig:i2c_aic3204} illustrates how the $\text{I}^2$C communication between the dsp and audio codec where the dsp is set as the master. The dsp transmits a 7-bit address to specify the $\text{I}^2$C slave. The address of the register is afterwards sent followed by the data to the register. 
 
 \begin{figure}[H]
 \centering
@@ -52,6 +51,7 @@ To setup the audio codec so it complies with the requirements on 24-bit and a sa
 \label{fig:i2c_aic3204}
 \end{figure}  
 
+By using procedure above, the registers of the audio codec is then set to be mono, 24-bit and 96 kHz. When a audio sample is transmitted through the $\text{I}^2$S to the dsp, an interrupt flag for the $\text{I}^2$S is set high to tell the processor that data can be read from the data register.
 
 
 
